--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.3.4",
     "faker": "^5.5.3",
     "firebase": "^9.1.3",
-    "next": "latest",
+    "grpc": "^1.24.11",
+    "hooks": "^0.3.2",
+    "next": "^12.0.1",
     "next-auth": "4.0.0-beta.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "recoil": "^0.4.1",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
