--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "faker": "^5.5.3",
     "firebase": "^9.1.3",
     "grpc": "^1.24.11",
+    "moment": "^2.29.1",
     "next": "^12.0.1",
     "next-auth": "4.0.0-beta.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "recoil": "^0.4.1",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
